(library
 (name xapi_tracing)
 (modules tracing)
 (libraries re uri xapi-log xapi-stdext-threads threads.posix)
 (package xapi-tracing-export)
 (wrapped false)
)

(library
 (name tracing_export)
 (modules tracing_export)
 (public_name xapi-tracing-export)
 (libraries
  cohttp
  cohttp_posix
  ptime
  ptime.clock.os
  rpclib.core
  rpclib.json
  result
  rresult
  xapi_tracing
  threads.posix
  uri
  xapi-log
  xapi_open_uri
  xapi-stdext-threads
  xapi-stdext-unix
  zstd)
 (preprocess
  (pps ppx_deriving_rpc)))

(test
 (name test_tracing)
 (modules test_tracing)
 (package xapi-tracing-export)
 (libraries xapi_tracing alcotest fmt uuid xapi-log))
