(library
  (name xapi_compression)
  (package xen-api-client)
  (modules xapi_compression)
  (libraries
    forkexec
    threads
    safe_resources
    xapi-log
    xapi-stdext-pervasives
    xapi-stdext-unix
  )
)

(executable
 (name xapi_gzip)
 (modes exe)
 (modules xapi_gzip)
 (libraries xapi_compression cmdliner))
