(executable
  (modes exe)
  (name main)
  (libraries
    cmdliner
    message_switch_core
    message_switch_unix
    mtime
    rpclib.core
    rpclib.json
    threads.posix
  )
  (preprocess (pps ppx_deriving_rpc))
)

; should be xapi once we change its install rules to install into /opt,
; and use dune instead of the Makefile
(install
 (package message-switch-lwt)
 (section sbin)
 (files (main.exe as message-cli))
)
